调整了默认样式和添加幻灯片

--- a/src/assets/styles/hj_style.scss
+++ b/src/assets/styles/hj_style.scss
@@ -1,8 +1,21 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .hj_all {
   display: flex;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .hj_slider {
+  box-sizing: border-box;
   width: 15%;
   min-height: 100%;
   border-right: 1px solid rgb(13, 74, 137);
