各个下拉框联动并且更新标题信息

--- a/src/assets/styles/hj_style.scss
+++ b/src/assets/styles/hj_style.scss
@@ -57,8 +57,7 @@
 }
 
 
-.higet_ppt_pointer:hover,
-:focus {
+.higet_ppt_pointer:hover {
   cursor: pointer;
   color: #23527c;
   text-decoration: underline;
@@ -239,3 +238,4 @@
 .hj_sidebar_category_ppt {
   max-height: 235px;
 }
+
