--- a/src/assets/styles/hj_style.scss
+++ b/src/assets/styles/hj_style.scss
@@ -150,7 +150,7 @@
 .hj_slider {
   box-sizing: border-box;
   width: 15%;
-  min-height: 100%;
+  min-height: 200px;
   border-right: 1px solid rgb(13, 74, 137);
   overflow: auto;
   padding-top: 10px;
@@ -241,8 +241,7 @@
   font-family: Helvetica Neue, Helvetica, PingFang SC, Tahoma, Arial, sans-serif;
 }
 
-.hj_sidebar_category_ppt {
-  max-height: 235px;
-  overflow: auto;
-}
+// .hj_sidebar_category_ppt {
+//   min-height: 235px;
+// }
 
