--- a/src/assets/styles/hj_style.scss
+++ b/src/assets/styles/hj_style.scss
@@ -149,7 +149,8 @@
 
 .hj_slider {
   box-sizing: border-box;
-  width: 15%;
+  // width: 8.3333333333%;
+  width: 1/12;
   min-height: 200px;
   border-right: 1px solid rgb(13, 74, 137);
   overflow: auto;
@@ -264,6 +265,181 @@
   height: 78vh;
 }
 
-// .viewHisContent {
-//   height: 90%;
+.viewSiderBarIcon {
+  width: 5px;
+  height: 5px;
+  display: inline-block;
+  margin: auto 5px auto 0;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: black;
+}
+
+// .titleLine {
+//   width: 100%;
+//   text-align: center;
+//   font-size: 18px;
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+//   font-family: inherit;
+//   font-weight: 500;
+//   line-height: 1.1;
+//   color: inherit;
+//   box-sizing: border-box;
 // }
+
+.titleLine {
+  width: 94%;
+  text-align: center;
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+  box-sizing: border-box;
+  position: sticky;
+}
+
+// .versionInfoLine {
+//   display: inline-block;
+//   width: 100%;
+//   height: 20px;
+//   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+//   font-size: 14px;
+//   line-height: 1.42857143;
+//   color: #333;
+//   background-color: #fff;
+//   position: fixed;
+// }
+
+.versionInfoLine {
+  z-index: 3;
+  display: inline-block;
+  width: 100%;
+  height: 20px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  // background-color: #b73030;
+  position: sticky;
+}
+
+.span_ppt_version {
+  margin-right: 20px;
+  // position: absolute;
+}
+
+
+.ppt_crateor_info {
+  // display: inline-block;
+  float: right;
+}
+
+.viewHisContent {
+  display: flex;
+  justify-self: center;
+  position: relative;
+  // align-items: center;
+}
+
+// .saveHis {
+//   vertical-align: middle;
+//   margin-top: 5px;
+//   display: flex;
+//   align-items: center;
+// }
+
+.hiwin_ppt_snapshot_models_sidebar_row {
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  background-color: rgb(238, 238, 238);
+  color: #337ab7;
+}
+
+.hiwin_ppt_snapshot_models_sidebar_row:hover {
+  color: #337ab7;
+  text-decoration: underline;
+}
+
+// 删除的icon
+.ppt_delete_icon {
+  color: #ee0c0c !important;
+  font-size: 15px !important;
+  margin: 0 8px 0 5px;
+  cursor: pointer;
+}
+
+.hiwin_ppt_snapshot_models_sidebar_row_i_delete {
+  color: #FF5722;
+  margin: 0 8px 0 5px;
+  cursor: pointer;
+}
+
+.PptLeft {
+  height: calc(100vh - 202px);
+  overflow-y: auto;
+  min-height: 200px;
+  width: calc(11.666667% - 2px);
+}
+
+// .PptRight {
+//   width: 88%;
+//   height: 100%;
+// }
+
+.PptRight {
+  width: 88%;
+  // height: 100%;
+  height: calc(100vh - 202px);
+}
+
+// .viewHistPPt {
+//   height: 100vh;
+//   width: 100%;
+// }
+
+.viewHistPPt {
+  height: calc(100% - 20px);
+  position: relative;
+  width: 100%;
+}
+
+
+
+// .viewHistPPt {
+//   height: 100vh;
+//   width: 100%;
+//   /* position: relative; */
+// }
+
+.viewHisHeader {
+  position: sticky;
+}
+
+.el-alert {
+  z-index: 99999 !important;
+}
+
+.ppt_view_his_hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #eee;
+}
+
+.ppt_save_current_version {
+  color: #23527c;
+  text-decoration: none;
+}
+
+.ppt_save_current_version:hover {
+  color: #23527c;
+  text-decoration: underline;
+  cursor: pointer;
+}
