--- a/src/assets/styles/hj_style.scss
+++ b/src/assets/styles/hj_style.scss
@@ -14,6 +14,11 @@
   background-color: #fff;
 }
 
+.font_common_ppt {
+  font: 14px Helvetica Neue, Helvetica, PingFang SC, Tahoma, Arial, sans-serif;
+  color: #41464b;
+}
+
 // 公共一行
 .hj_ppt_inline {
   display: inline-block;
@@ -279,10 +284,23 @@
 
 
 // 查看历史模块
+// .pptNull {
+//   display: flex;
+//   justify-self: center;
+//   align-items: center;
+//   width: 100%;
+//   height: 100%;
+//   position: relative;
+//   // height: 78vh;
+// }
 .pptNull {
-  display: none;
+  /* display: flex; */
+  justify-self: center;
+  align-items: center;
   width: 100%;
-  height: 78vh;
+  height: 100%;
+  text-align: center;
+  position: relative;
 }
 
 .viewSiderBarIcon {
@@ -498,4 +516,11 @@
 
 .ppt_his_close_btn {
   border: 1px solid #333 !important;
+}
+
+.pptHisListNull {
+  vertical-align: middle;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
 }
